# printed_full_name_checker

./: .gitignore  README.md  configure_scanner.py  hello.py  main.py  pyproject.toml  requirements.txt  run_webui.py  scan_assignments.py  scanner_config.json  temp_roster.csv
src/assignment_scanner/: __init__.py  cli.py  image_processor.py  ocr_processor.py  process_regions.py  region_processor.py  scanner.py  stacker.py  state_manager.py  ui_manager.py  webui.py
src/ocr/: base.py  florence.py  huggingface_api.py  processor.py  qwen.py
